# neopixel-soft-blink

boards/circuit_playground_bluefruit/: Cargo.toml  README.adoc
boards/circuit_playground_bluefruit/examples/: soft-blink-onboard.rs
boards/circuit_playground_express/: Cargo.toml
boards/circuit_playground_express/examples/: soft-blink-onboard.rs
boards/raspberry_pi_pico/: Cargo.toml  README.adoc
boards/raspberry_pi_pico/examples/: rgbw-neopixel-stick-soft-blink.rs  rgbw-neopixel-strand-candy-cane.rs
