[package]
name = "circuit_playground_bluefruit_example"
version = "0.1.0"
description = "Examples of lighting effects for the Circuit Playground Bluefruit"
authors = ["Jordan Williams <jordan@jwillikers.com>"]
keywords = ["dotstar", "embedded", "fx", "led", "neopixel", "no-std", "smart-leds", "ws2812"]
license = "MIT OR Apache-2.0"
edition = "2021"
readme = "README.adoc"
repository = "https://github.com/jwillikers/smart-leds-fx"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rtic = "1.1.4"
embedded-hal = "1.0.0"
embedded_hal_0_2 = {package = "embedded-hal", version = "0.2.7", features = ["unproven"]}
fugit = "0.3.7"
nrf52840-hal = {version = "0.18.0", features = ["rtic-monotonic"]}
panic-halt = "0.2.0"
rtt-target = "0.5.0"
smart-leds = "0.4.0"
ws2812-spi = "0.5.0"
ws2812-timer-delay = "0.3.0"

[dependencies.smart-leds-fx]
path = "../../smart-leds-fx"
version = "0.1.0"

[profile]
[profile.dev]
debug = true
lto = true
opt-level = 3

[profile.release]
codegen-units = 1
debug = true
lto = true
opt-level = 3
